[package]
name = "capture-windows"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4" 
axum = "0.7"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.35"
serde_with = { version = "3.14.0", features = ["macros"] }
windows = { version = "0.56", features = [
  "Win32_System_Performance",
  "Win32_Foundation",
  "Win32_Storage_FileSystem"   # ← 加這行
] }